Announce support for `vcapi` protocol in `manifest.json`.

--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,6 @@
     "url": "/wallet-worker.html",
     "enabledTypes": ["VerifiablePresentation"],
     "acceptedInput": "url",
-    "acceptedProtocols": ["OID4VC", "OID4VP"]
+    "acceptedProtocols": ["OID4VC", "OID4VP", "vcapi"]
   }
 }
